--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^3.18.0"
+    "fastify": "^3.18.0",
+    "nodemon": "^2.0.12"
   }
 }
