server 3 added successfully

--- a/package.json
+++ b/package.json
@@ -12,7 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "fastify": "^3.18.0",
-    "nodemon": "^2.0.12"
+    "fastify-autoload": "^3.8.1",
+    "fastify-cors": "^6.0.2",
+    "fastify-env": "^2.1.1",
+    "fastify-jwt": "^3.0.1",
+    "fastify-mongodb": "^4.1.0",
+    "fastify-plugin": "^3.0.0",
+    "fastify-swagger": "^4.9.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.2",
+    "nodemon": "^2.0.12",
+    "swagger": "^0.7.5"
   }
 }
